tests/integration/error/import_alias_private_function.alo
// expect-error: Undefined function 'vis::private_value'

import "../fixtures/visibility_symbols.alo" as vis;

fun main() -> void {
    vis::private_value();
}
